@@ -1,6 +1,6 @@
 WebHACC:Title;;WebHACC (β)
 WebHACC:Heading;; <a href="../error-description#WebHACC:Heading" rel="help"><abbr title="Web Hypertext Application Conformance Checker (β)"><img alt="WebHACC" src="../icons/title"></abbr></a> 
-fallback-char-error;;Octet sequence <code><var>{octets}</var></code> is not an allowed representation of the character <code><var>{char}</var></code> — a character reference <code><var>{char:hexref}</var></code> should be used instead.
+fallback-char-error;;Octet sequence <code><var>{octets}</var></code> is not an allowed representation of the character <code><var>{char}</var></code> — character reference <code><var>{char:hexref}</var></code> should be used instead.
 fallback-unassigned-error;;No character is assigned to octet sequence <code><var>{octets}</var></code>.
 illegal-octets-error;;Octet sequence <code><var>{octets}</var></code> is illegal.
 invalid-state-error;;The input stream is broken.
@@ -19,6 +19,11 @@ charset label:matching;;Sniffed character encoding <code><var>{text}</var></code
 charset label detected;;While parsing the document as <code><var>{text}</var></code>, a character encoding declaration specifying a different character encoding is found. The document is reparsed.
 NULL;;The <code class="charname">NULL</code> character is not allowed.
 control char;;Code point <code><var>{text}</var></code> is not allowed.
+nonchar;;Noncharacter <code><var>{text}</var></code> is found in the input stream.
+unicode deprecated;;Use of character <code><var>{text}</var></code> is deprecated.
+unicode discouraged;;Use of character <code><var>{text}</var></code> is discouraged.
+unicode not preferred;;Code point <code><var>{text}</var></code> is not the preferred representation of that character.
+unicode should;;Character <code><var>{text}</var></code> should not be used in many cases.
 bad attribute name;;Attribute name cannot contain characters <code>"</code>, <code>'</code>, and <code>=</code>.
 bad attribute value;;Attribute value must be quoted by <code>"</code> or <code>'</code> if it contains a <code>"</code>, <code>'</code>, or <code>=</code> character.
 bare ero;;The <code>&amp;</code> character must be escaped as <code class="html example">&amp;amp;</code>.
